# gemma-harness

./: .gitignore  README.md  cli.py  config.py  pyproject.toml  server.py
engine/: agent_loop.py  context_manager.py  llm_client.py  verifier.py
prompts/: constitution.md  tool_guidelines.md
tools/: __init__.py  base.py  code_executor.py  filesystem.py  git_tools.py  memory.py  time_tool.py  web.py
