[project]
name = "gemma-harness"
version = "0.1.0"
description = "Claude-style agentic harness for local Gemma 4 E4B"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
gemma-harness = "gemma_harness.cli:main"
